<resources>
    <string name="app_name">PokemonQRCode</string>
    <string name="app_title">PokemonQRCode</string>
    <string name="login">Submit</string>
    <string name="register">Click here to register</string>
    <string name="user_name_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">E-Mail</string>
    <string name="register_header_text">Register</string>
    <string name="cancel">Cancel</string>
    <string name="players">Players</string>
    <string name="score">Score: </string>
    <string name="other_players_header">Players Who Caught this Code</string>
    <string-array name="options">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="total_codes">Total Codes:</string>
    <string name="total_score">Total Score:</string>
    <string name="return_home">return home</string>
    <string-array name="sort_by">
        <item>Score: High -> Low</item>
        <item>Score: Low -> High</item>
        <item>Date</item>
    </string-array>
</resources>